--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -51,11 +51,11 @@ jobs:
           command: "readme"
         env:
           GH_PAT: ${{ secrets.GH_PAT || github.token }}
-      - name: Generate graphs
-        uses: benc-uk/workflow-dispatch@v1
-        with:
-          workflow: Graphs CI #buang mani
-          token: ${{ secrets.GH_PAT || github.token }}
+      #- name: Generate graphs
+        #uses: benc-uk/workflow-dispatch@v1
+        #with:
+          #workflow: Graphs CI 
+          #token: ${{ secrets.GH_PAT || github.token }}
       - name: Generate site
         uses: upptime/uptime-monitor@v1.41.0
         with:
